docs(01-java-basic): 系统性修正事实错误并补齐版本差异标注
对 docs/01-java-basic/ 16 篇文档做一轮事实性审阅与修订。按"深度源码型 /
基础概念型"分型要求，重点修正机制描述错误、补齐版本生效范围、精准化关键
术语，不改动既有章节骨架，不新增/删除文件。

【核心事实修正】

- 03-并发编程：volatile ↔ MESI 因果链改写为"写屏障触发缓存一致性协议通
  信"的正确表述，杜绝"volatile = MESI"的简化误导；补入 JEP 374（JDK 15+
  偏向锁默认禁用，JDK 18 移除）版本事实；活锁示例 transferMoney 补齐
  throws InterruptedException。
- 04-JVM 内存结构与 GC：ZGC 染色指针位布局由错误的 Unused/Marked/
  Remapped/Finalizable 修正为 bit 42~45 的 Finalizable/Remapped/
  Marked1/Marked0；堆上限 "4TB" 更新为 JDK 13+ 的 16TB；"价值堆"
  （ValueGC）纠正为"分代 ZGC"并附 JEP 439 与 -XX:+ZGenerational；
  final 字段 happens-before 表述精确化。
- 04-JVM §11 前沿技术章前置"本章定位与边界声明"告示块，明确该章为外延
  阅读索引，后续将独立成文。

【其他 13 篇的修订面】

- 术语精准化：String Table、Method Handle、Class Loader 等首次出现处
  补齐词源与同家族成员卡片；泛型擦除、反射性能等章节关键术语加反引号。
- 版本差异标注：Java 8/9/11/17 的 API 边界（var、record、sealed、
  pattern matching、text blocks 等）统一补齐生效版本与迁移说明。
- 示例代码修缮：修复若干未 throws 的编译错误、补齐缺失 import、去除
  "...省略..." 占位。
- 对比信息表格化：原并列项目符号列出的 JDK 代理 vs CGLIB、ArrayList vs
  LinkedList、HashMap 树化阈值等信息统一改为表格。

【变更范围】

16 files changed, 359 insertions(+), 265 deletions(-)
- 修订：01~16 共 16 篇（不含 00-Java 基础与 JVM 概览，本轮审阅无需改动）
- 未新增/删除文件；未调整目录结构与文件名（遵守已部署文档禁止改名约束）
- mkdocs build --strict 对本次范围零告警零错误
- 全 17 篇 doc_id 注册完整，跨文引用零相对路径漏网

【后续独立任务（不包含在本 commit）】

- 04-JVM §11 完整拆分为独立文档（当前 91KB 超 60KB 红线，登记为技术债务）
- 03-并发编程 69KB 超阈值，按"基础 / 容器与工具"切片评估中
- 05-redis/03 两条死 @doc_id 阻断 strict 构建，独立处理